# rust-ml-inference

./: .gitignore  Cargo.toml  README.md  package.json  requirements.txt
.cargo/: config.toml
models/iris/: iris-script.py  iris_data.ipynb  iris_notebook.ipynb
src/: another_lib.rs  lib.rs  main.rs  not_lib.rs
tests/: index.html
