[package]
name = "wasm-inference-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.19.0"
js-sys = "0.3.72"
serde = "1.0.214"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-streams = "0.4.2"
web-sys = "0.3.72"
wgpu = "23.0.0"

