[package]
name = "neospace-inference"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.72"
serde = {"1.0.214", features=["derive"]}
tract-onnx = "0.21.7"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-streams = "0.4.2"
web-sys = {"0.3.72", features=[
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGl2RenderingContext"
]}
wgpu = {"23.0.0", features=["webgl"]}

[dev.dependencies]
tokio = {version = "1.0", features=["full"]}
